fixing the overflow-x problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,10 +70,6 @@ h4 {
     margin-bottom: 25px;
 }
 
-.section-column-main{
-    padding: 10px;
-}
-
 /*--------------------------------------------Heading*/
 header {
     margin: 0;
